correct the hyperlink error

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>R is a free and open. So is our club. You can join in freely, drop out freely, speak freely, argue freely... But please remember you are one member of the community. What you do shapes who you are. </p>
 <p>Let's get started. Enjoy the journey!</p>
 <h3 id="tutorial"><a name="welcome-to-wise-r-club-homepage" class="anchor" href="#welcome-to-wise-r-club-homepage"><span class="octicon octicon-link"></span></a>Tutorials</h3>
-<p><a href="tutorial/Install and Upgrade R on Windows.html">Install and Upgrade R on Windows</a></p>
+<p><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></p>
         </section>
 
 
