modify some little flaws

--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -138,5 +138,11 @@ body{font-size:16px;}
 <p>Please note that I only check <strong>PDF</strong> format solution. If you write your solution in Word, please convert it into PDF. </p>
 <p>You also need to note that I will not check any emails after the deadline. I'm sorry for that. But I think the time is enough for you to accomplish this assignment.</p>
 <p>This question is fictional. If there are any errors about the question itself, please let me know.</p>
-<p>Please forgive me for my bad English.</p>
-<p>If you are not sure how to use a function, the best solution is to use the help functions in R which is summarized in Table 1.2. For more complicated questions you can search <a href="http://www.rseek.org/">Rseek</a>, <a href="http://stackoverflow.com/">StackOverflow</a>, Google and Baidu for help. Know how to ask for help is the most important skill you should master. </p></body></html>
+<p>Please forgive me for my poor English.</p>
+<p>If you are not sure how to use a function, the best solution is to use the help functions in R which is summarized in Table 1.2. For more complicated questions you can search <a href="http://www.rseek.org/">Rseek</a>, <a href="http://stackoverflow.com/">StackOverflow</a>, Google and Baidu for help. Know how to ask for help is the most important skill you should master. </p>
+
+<p>&nbsp;</p>
+<p><a href="../index.html">Return to the homepage.</a></p>
+<hr>
+<p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p>
+</body></html>
