--- a/tutorial/Install_Upgrade_R_on_Windows.html
+++ b/tutorial/Install_Upgrade_R_on_Windows.html
@@ -122,7 +122,7 @@ body{font-size:16px;}
 }
 </style><title>Install and Upgrade R on Windows</title></head><body><h1 id="install-and-upgrade-r-on-windows">Install and Upgrade R on Windows</h1>
 <p>WISE R CLUB, Xiaojun Sun, 2014.06.20  </p>
-<p><a href="../index.html">Back to the homepage</a></p>
+<p><a href="../index.html">Return to the homepage</a></p>
 <p>R is a language and environment for statistical computing and graphics. It is widely used around the world. Here I briefly describe the steps to install and upgrade R for R beginners. This post is written for Windows user. If you use Mac, please search Google for instruction. If you have already installed R on your computer, you can jump to step two.</p>
 <h2 id="step-1-install-r-and-rstudio">Step 1: Install R and Rstudio</h2>
 <p>The latest version of R can be download from <a href="http://mirrors.xmu.edu.cn/CRAN/">CRAN</a>. Rstudio Desktop can be download from it's <a href="http://www.rstudio.com/products/rstudio/download/">official site</a>. </p>
@@ -161,11 +161,9 @@ New.R.RunMe()
 
 <p>That's all. I hope it helps. Thank you! O(∩_∩)O</p>
 <p>&nbsp;</p>
-<p><a href="../index.html">—&gt;Back to the homepage.</a></p>
-<p>&nbsp;</p>
+<p><a href="../index.html">Return to the homepage.</a></p>
 
 <hr>
 <p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p>
-
 
 </body></html>
