add grades.txt dataset hyperlink

--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -124,7 +124,7 @@ body{font-size:16px;}
 <p>WISE R CLUB, Xiaojun Sun, 2014.06.25</p>
 <p>This is the first assignment for WISE R Club members. I believe you are able to accomplish this assignment after reading the first four chapters of R in Action. The question is described as following.</p>
 <h3 id="question">Question</h3>
-<p>There are 300 grade one students in the DongShan junior high school. Recently they held a exam for all the students in grade one. Only 3 subjects (Math, Chinese and English) are included in this exam. The grades data for all the students is stored in <code>grades.txt</code> which I have already distributed to you. Please answer the following questions use R based on this dataset.</p>
+<p>There are 300 grade one students in the DongShan junior high school. Recently they held a exam for all the students in grade one. Only 3 subjects (Math, Chinese and English) are included in this exam. The grades data for all the students is stored in <code>grades.txt</code> which I have already distributed to you. This dataset is also available <a href="https://github.com/XiaojunSun/wise-r-club/blob/master/data/grades.txt" target="_blank">here</a>.Please answer the following questions use R based on this dataset.</p>
 <ol>
 <li>Import the <code>grades.txt</code> into R to create a data frame which contains four variables: name, Math, Chinese and English.</li>
 <li>Plot a histogram graph for the grade of Math. Modify the default options of the <code>hist</code> function to get a better graph.</li>
