add solution to assignment 1

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
 <p>We gather together to explore the R planet. It's a wonderful but challenging journey. This planet is so broad and full of different people comes from different corners of Earth. They forms a big but friendly R community. We hope all of the members in WISE R Club also be a member of the R community. We learn R, explore R and build R together with all members of the R community.</p>
 <p>R is a free and open. So is our club. You can join in freely, drop out freely, speak freely, argue freely... But please remember you are one member of the community. What you do shapes who you are. </p>
 <p>Let's get started. Enjoy the journey!</p>
+
 <h3 id="tutorial"><a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorials</h3>
 <p><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></p>
-<h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignments</h3>
-<p><a href="assignment/assignment1.html" target="_blank">assignment 1</a></p>
-        </section>
 
+<h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignment</h3>
+<p><a href="assignment/assignment1.html" target="_blank">assignment 1</a></p>
+
+<h3 id="solution"><a name="solution" class="anchor" href="#solution"><span class="octicon octicon-link"></span></a>Solution</h3>
+<p><a href="solution/solution_to_assignment1.html" target="_blank">solution to assignment 1</a></p>
+        </section>
 
         <aside id="sidebar">
           <a href="https://github.com/XiaojunSun/wise-r-club/zipball/master" class="button">
