--- a/assignment/assignment2.html
+++ b/assignment/assignment2.html
@@ -321,7 +321,7 @@ MathJax.Hub.Config({
 </script>
 <title>assignment2</title></head><body><h2 id="assignment-2"><a name="user-content-assignment-2" href="#assignment-2" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>Assignment 2</h2>
 <p>WISE R CLUB, Xiaojun Sun, 2014.07.11</p>
-<p>This is the second assignment for WISE R Club members. You are asked to read Chapter 5 to Chapter 8 of R in Action before trying to finish this assignment. The questions are described as following.</p>
+<p>This is the second assignment for WISE R Club members. You&rsquo;d better read Chapter 5 to Chapter 8 of R in Action before trying to finish this assignment. The questions are described as following.</p>
 <hr />
 <p><strong>CONTENTS</strong></p>
 <div class="toc">
@@ -400,14 +400,14 @@ MathJax.Hub.Config({
 <h3 id="notice"><a name="user-content-notice" href="#notice" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>Notice</h3>
 <ol>
 <li>You need to send your solution in <strong>PDF</strong> format to my email (xiaojunsunshine@126.com) before <strong>Tuesday, 15th July 24:00</strong>.</li>
-<li>You are required to include both the <strong>resource codes</strong> and results in the your solution. </li>
-<li>The question is a bit too many. <img align="absmiddle" alt="The question is a bit too many. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/sweat_smile.png" title="The question is a bit too many. " width="20px" /> Just go ahead and give it a try. If you feel it&rsquo;s hard to finish all the questions, you can just finish some of them and send to me. </li>
+<li>You are required to include both the <strong>source codes</strong> and results in the your solution. </li>
+<li>The questions are a bit too many. <img align="absmiddle" alt="The questions are a bit too many. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/sweat_smile.png" title="The questions are a bit too many. " width="20px" /> Just go ahead and give it a try. If you feel it&rsquo;s hard to finish all the questions, you can just finish some of them and send to me. </li>
 <li>I will write a solution for this assignment and explain it in detail in the next meeting of R Club. </li>
-<li>I hope you have fun when learning R. <img align="absmiddle" alt="I hope you have fun when learning R. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/blush.png" title="I hope you have fun when learning R. " width="20px" />  <img align="absmiddle" alt="I hope you have fun when learning R. klzzwxh:0040  " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/kissing_heart.png" title="I hope you have fun when learning R. klzzwxh:0040  " width="20px" /> </li>
+<li>I hope you have fun while learning R. <img align="absmiddle" alt="I hope you have fun while learning R. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/blush.png" title="I hope you have fun while learning R. " width="20px" />  <img align="absmiddle" alt="I hope you have fun while learning R. klzzwxh:0041  " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/kissing_heart.png" title="I hope you have fun while learning R. klzzwxh:0041  " width="20px" /> </li>
 </ol>
 <p>&nbsp;</p>
 
-<p><a href="E:\Activity\WISE R Club\assignment/../index.html">Return to the homepage.</a></p>
+<p><a href="http://xiaojunsun.github.io/wise-r-club/">Return to the homepage.</a></p>
 
 <hr />
 <p><p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
