--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -341,7 +341,7 @@ MathJax.Hub.Config({
 <p>If you are not sure how to use a function, the best solution is to use the help functions in R which is summarized in Table 1.2. For more complicated questions you can search <a href="http://www.rseek.org/">Rseek</a>, <a href="http://stackoverflow.com/">StackOverflow</a>, Google and Baidu for help. Know how to ask for help is the most important skill you should master. </p>
 <p>&nbsp;</p>
 
-<p><a href="E:\Activity\WISE R Club\assignment/../index.html">Return to the homepage.</a></p>
+<p><a href="http://xiaojunsun.github.io/wise-r-club/">Return to the homepage.</a></p>
 
 <hr />
-<p><p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
+<p><p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
