--- a/assignment/assignment1.html
+++ b/assignment/assignment1.html
@@ -344,4 +344,4 @@ MathJax.Hub.Config({
 <p><a href="http://xiaojunsun.github.io/wise-r-club/">Return to the homepage.</a></p>
 
 <hr />
-<p><p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
+<p><p></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
