--- a/assignment/assignment2.html
+++ b/assignment/assignment2.html
@@ -403,11 +403,11 @@ MathJax.Hub.Config({
 <li>You are required to include both the <strong>source codes</strong> and results in the your solution. </li>
 <li>The questions are a bit too many. <img align="absmiddle" alt="The questions are a bit too many. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/sweat_smile.png" title="The questions are a bit too many. " width="20px" /> Just go ahead and give it a try. If you feel it&rsquo;s hard to finish all the questions, you can just finish some of them and send to me. </li>
 <li>I will write a solution for this assignment and explain it in detail in the next meeting of R Club. </li>
-<li>I hope you have fun while learning R. <img align="absmiddle" alt="I hope you have fun while learning R. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/blush.png" title="I hope you have fun while learning R. " width="20px" />  <img align="absmiddle" alt="I hope you have fun while learning R. klzzwxh:0041  " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/kissing_heart.png" title="I hope you have fun while learning R. klzzwxh:0041  " width="20px" /> </li>
+<li>I hope you have fun while learning R. <img align="absmiddle" alt="I hope you have fun while learning R. " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/blush.png" title="I hope you have fun while learning R. " width="20px" />  <img align="absmiddle" alt="I hope you have fun while learning R. klzzwxh:0040  " height="20px" src="https://assets-cdn.github.com/images/icons/emoji/kissing_heart.png" title="I hope you have fun while learning R. klzzwxh:0040  " width="20px" /> </li>
 </ol>
 <p>&nbsp;</p>
 
 <p><a href="http://xiaojunsun.github.io/wise-r-club/">Return to the homepage.</a></p>
 
 <hr />
-<p><p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
+<p><p></a>WISE R Club project is proudly maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p></p></body></html>
