--- a/solution/solution_to_assignment1.html
+++ b/solution/solution_to_assignment1.html
@@ -136,9 +136,9 @@ outstand</code></pre>
 <p>Thank you!</p>
 <p><strong>The end</strong>.</p>
 <p>&nbsp;</p>
-<p><a href="../index.html">Return to the homepage.</a></p>
+<p><a href="https://github.com/XiaojunSun/wise-r-club">Return to the homepage.</a></p>
 <hr>
-<p class="repo-owner"><a href="https://github.com/XiaojunSun/wise-r-club"></a>WISE R Club project is maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p>
+<p></a>WISE R Club project is maintained by <a href="https://github.com/XiaojunSun">XiaojunSun</a>.</p>
 </div>
 
 
