add a link to solution2

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
 </ul>
 
 <h3 id="solution"><a name="solution" class="anchor" href="#solution"><span class="octicon octicon-link"></span></a>Solution</h3>
-<p><a href="solution/solution_to_assignment1.html" target="_blank">solution to assignment 1</a></p>
-        </section>
+<ul>
+<li><a href="solution/solution_to_assignment1.html" target="_blank">solution to assignment 1</a></li>
+<li><a href="solution/solution_to_assignment2.html" target="_blank">solution to assignment 2</a></li>
+</ul>
+
+ </section>
 
         <aside id="sidebar">
           <a href="https://github.com/XiaojunSun/wise-r-club/zipball/master" class="button">
