add link to intro r markdown

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 <p>Let's get started. Enjoy the journey!</p>
 
 <h3 id="tutorial"><a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorials</h3>
-<p><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></p>
-<p><a href="tutorial/introductory_rmarkdown.html" target="_blank">Introductory RMarkdown</a></p>
+<ul>
+<li><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></li>
+<li><a href="tutorial/introductory_rmarkdown.html" target="_blank">Introductory RMarkdown</a></li>
+</ul>
 
 <h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignment</h3>
 <ul>
