--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <ul>
 <li><a href="assignment/assignment1.html" target="_blank">assignment 1</a></li>
 <li><a href="assignment/assignment2.html" target="_blank">assignment 2</a></li>
+<li><a href="assignment/r-project-1.html" target="_blank">R project 1</a></li>
 </ul>
 
 <h3 id="solution"><a name="solution" class="anchor" href="#solution"><span class="octicon octicon-link"></span></a>Solution</h3>
