r project 1 solution page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <ul>
 <li><a href="solution/solution_to_assignment1.html" target="_blank">solution to assignment 1</a></li>
 <li><a href="solution/solution_to_assignment2.html" target="_blank">solution to assignment 2</a></li>
+<li><a href="solution/r_project_1_solution.html" target="_blank">solution to r project 1</a></li>
 </ul>
 
  </section>
