initial commit of presentation at 20140925

--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
 <ul>
 <li><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></li>
 <li><a href="tutorial/introductory_rmarkdown.html" target="_blank">Introductory RMarkdown</a></li>
+<li><a href="tutorial/wiser20140920.html" target="_blank">Welcome, WISER!(2014)</a></li>
 </ul>
 
-<h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignment</h3>
+<h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignments</h3>
 <ul>
 <li><a href="assignment/assignment1.html" target="_blank">assignment 1</a></li>
 <li><a href="assignment/assignment2.html" target="_blank">assignment 2</a></li>
 <li><a href="assignment/r-project-1.html" target="_blank">R project 1</a></li>
 </ul>
 
-<h3 id="solution"><a name="solution" class="anchor" href="#solution"><span class="octicon octicon-link"></span></a>Solution</h3>
+<h3 id="solution"><a name="solution" class="anchor" href="#solution"><span class="octicon octicon-link"></span></a>Solutions</h3>
 <ul>
 <li><a href="solution/solution_to_assignment1.html" target="_blank">solution to assignment 1</a></li>
 <li><a href="solution/solution_to_assignment2.html" target="_blank">solution to assignment 2</a></li>
