--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>WISE R Club is a study group established by Xi Liu and Xiaojun Sun at <a href="http://www.wise.xmu.edu.cn/index.asp">WISE</a>, Xiamen University. It aims to help students at WISE learn R, a language and environment for statistical computing and graphics. </p>
 <p>We gather together to explore the R planet. It's a wonderful but challenging journey. This planet is so broad and full of different people comes from different corners of Earth. They forms a big but friendly R community. We hope all of the members in WISE R Club also be a member of the R community. We learn R, explore R and build R together with all members of the R community.</p>
-<p>R is a free and open. So is our club. You can join in freely, drop out freely, speak freely, argue freely... But please remember you are one member of the community. What you do shapes who you are. </p>
+<p>R is a free and open, so is our club. You can join in freely, drop out freely, speak freely, argue freely... But please remember you are one member of the community. What you do shapes who you are. </p>
 <p>Let's get started. Enjoy the journey!</p>
 
 <h3 id="tutorial"><a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorials</h3>
