Add data structures slides

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-            <a name="welcome-to-wise-r-club-homepage" class="anchor" href="#welcome-to-wise-r-club-homepage"><span class="octicon octicon-link"></span></a>Welcome to WISE R Club homepage!</h3>
+		
+	<h3 id="notice"><a name="notice" class="anchor" href="#notice"><span class="octicon octicon-link"></span></a>Notices</h3>
+	
+	<p><font size="6pt" color=#FF9900>
+	We have moved to <a href="https://github.com/wise-r">WISER</a>. We are offering a R language training course this semester. You can see the details about this course <a href="https://github.com/wise-r/R-Training">here</a>.
+    </font></p>
+	
+	<h3><a name="welcome-to-wise-r-club-homepage" class="anchor" href="#welcome-to-wise-r-club-homepage"><span class="octicon octicon-link"></span></a>Welcome to WISE R Club homepage!</h3>
 
 <p>WISE R Club is a study group established by Xi Liu and Xiaojun Sun at <a href="http://www.wise.xmu.edu.cn/index.asp">WISE</a>, Xiamen University. It aims to help students at WISE learn R, a language and environment for statistical computing and graphics. </p>
 <p>We gather together to explore the R planet. It's a wonderful but challenging journey. This planet is so broad and full of different people comes from different corners of Earth. They forms a big but friendly R community. We hope all of the members in WISE R Club also be a member of the R community. We learn R, explore R and build R together with all members of the R community.</p>
@@ -41,6 +47,7 @@
 <li><a href="tutorial/Install_Upgrade_R_on_Windows.html" target="_blank">Install and Upgrade R on Windows</a></li>
 <li><a href="tutorial/introductory_rmarkdown.html" target="_blank">Introductory RMarkdown</a></li>
 <li><a href="tutorial/wiser20140920.html" target="_blank">Welcome, WISER!(2014)</a></li>
+<li><a href="tutorial/data_structures.html" target="_blank">Chapter 2. Data Structures</a></li>
 </ul>
 
 <h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignments</h3>
