--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <li><a href="tutorial/introductory_rmarkdown.html" target="_blank">Introductory RMarkdown</a></li>
 <li><a href="tutorial/wiser20140920.html" target="_blank">Welcome, WISER!(2014)</a></li>
 <li><a href="tutorial/data_structures.html" target="_blank">Chapter 2. Data Structures</a></li>
+<li><a href="tutorial/subsetting.html" target="_blank">Chapter 3.1 Subsetting</a></li>
 </ul>
 
 <h3 id="assignment"><a name="assignment" class="anchor" href="#assignment"><span class="octicon octicon-link"></span></a>Assignments</h3>
