--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <li><a href="solution/solution_to_assignment2.html" target="_blank">solution to assignment 2</a></li>
 <li><a href="solution/r_project_1_solution.html" target="_blank">solution to r project 1</a></li>
 <li><a href="solution/attendchk.html" target="_blank">WISE Attendance Check Method</a></li>
+<li><a href="solution/attendchk2.html" target="_blank">WISE Attendance Check Method TWO</a></li>
 </ul>
 
  </section>
